src/shaders/snapshots/vulkan_slang_renderer__shaders__build_tasks__tests__alignment_tests@shaders__compiled__std430_scalars.json.snap
---
source: src/shaders/build_tasks.rs
info:
  relative_path: shaders/compiled/std430_scalars.json
---
{
  "sourceFileName": "std430_scalars.shader.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "Params",
        "fields": [
          {
            "kind": "pointer",
            "fieldName": "data",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "pointeeType": {
              "typeName": "ScalarData",
              "fields": [
                {
                  "kind": "scalar",
                  "fieldName": "a",
                  "binding": {
                    "kind": "uniform",
                    "offset": 0,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "scalar",
                  "fieldName": "b",
                  "binding": {
                    "kind": "uniform",
                    "offset": 4,
                    "size": 4
                  },
                  "scalarType": "uint32"
                },
                {
                  "kind": "scalar",
                  "fieldName": "c",
                  "binding": {
                    "kind": "uniform",
                    "offset": 8,
                    "size": 4
                  },
                  "scalarType": "float32"
                },
                {
                  "kind": "scalar",
                  "fieldName": "d",
                  "binding": {
                    "kind": "uniform",
                    "offset": 12,
                    "size": 4
                  },
                  "scalarType": "uint32"
                }
              ]
            },
            "pointeeSize": 16,
            "access": "readWrite"
          }
        ]
      }
    }
  ],
  "vertexEntryPoint": {
    "entryPointName": "vertMain",
    "stage": "vertex",
    "parameters": [
      {
        "kind": "scalar",
        "parameterName": "id",
        "semanticName": "SV_VERTEXID",
        "scalarType": "uint32"
      }
    ]
  },
  "fragmentEntryPoint": {
    "entryPointName": "fragMain",
    "stage": "fragment",
    "parameters": []
  },
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 16
          }
        ]
      }
    ],
    "pushConstantRanges": []
  }
}
